--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,10 @@
                 <a title="Linkedin" href="https://linkedin.com/company/mecra-proje-tasarim-uygulama" target="_blank">
                   <span class="social-icon"><i class="fab fa-linkedin"></i></span>
                 </a>
+                <a href="https://www.pinterest.jp/mecraproje/" aria-label="Pinterest"
+                  target="_blank"><i class="fab fa-pinterest"></i></a>
+                <a href="https://www.youtube.com/channel/UCzKqpejn_635Mgh_ZYRyhAg/featured" aria-label="Youtube"
+                    target="_blank"><i class="fab fa-youtube"></i></a>
               </li>
             </ul>
           </div>
@@ -95,8 +99,8 @@
 
                 <div id="navbar-collapse" class="collapse navbar-collapse">
                   <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item active">
-                      <a href="index.html" class="nav-link active">Anasayfa</a>
+                    <li class="nav-item">
+                      <a href="index.html" class="nav-link">Anasayfa</a>
                     </li>
                     <li class="nav-item">
                       <a href="about.html" class="nav-link">Hakkımızda</a>
@@ -104,8 +108,8 @@
                     <li class="nav-item">
                       <a href="team.html" class="nav-link">Ekibimiz</a>
                     </li>
-                    <li class="nav-item">
-                      <a href="projects.html" class="nav-link">Projelerimiz</a>
+                    <li class="nav-item active">
+                      <a href="projects.html" class="nav-link active">Projelerimiz</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">İletişim</a></li>
                   </ul>
@@ -139,126 +143,79 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <div class="shuffle-btn-group">
-              <label class="active" for="all">
-                <input type="radio" name="shuffle-filter" id="all" value="all" checked="checked">Hepsi
-              </label>
-              <label for="commercial">
-                <input type="radio" name="shuffle-filter" id="commercial" value="commercial">Commercial
-              </label>
-              <label for="education">
-                <input type="radio" name="shuffle-filter" id="education" value="education">Education
-              </label>
-              <label for="government">
-                <input type="radio" name="shuffle-filter" id="government" value="government">Government
-              </label>
-              <label for="infrastructure">
-                <input type="radio" name="shuffle-filter" id="infrastructure" value="infrastructure">Infrastructure
-              </label>
-              <label for="residential">
-                <input type="radio" name="shuffle-filter" id="residential" value="residential">Residential
-              </label>
-              <label for="healthcare">
-                <input type="radio" name="shuffle-filter" id="healthcare" value="healthcare">Healthcare
-              </label>
-            </div>
             <div class="row shuffle-wrapper">
               <div class="col-1 shuffle-sizer"></div>
-              <div class="col-lg-4 col-md-6 shuffle-item" data-groups="[&quot;government&quot;,&quot;healthcare&quot;]">
+              <div class="col-lg-4 col-sm-6 shuffle-item"">
                 <div class="project-img-container">
-                  <a class="gallery-popup" href="images/projects/project1.jpg">
-                    <img class="img-fluid" src="images/projects/project1.jpg" alt="project-image">
+                  <a class="gallery-popup" href="images/projects/altinekin-katli-evler/altinekin-evler-tasarim-mecra-proje-4.jpg" aria-label="project-img">
+                    <img class="img-fluid" src="images/projects/altinekin-katli-evler/altinekin-evler-tasarim-mecra-proje-4.jpg" alt="project-img">
                     <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="./content/projects/projects-single.html">Capital Teltway Building</a>
+                        <a href="content/projects/altinekin-guvercinlik-yazlik-konut-projesi.html">İ.A. Müstakil Konut Projesi</a>
                       </h3>
-                      <p class="project-cat">Commercial, Interiors</p>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 shuffle-item" data-groups="[&quot;healthcare&quot;]">
+              <div class="col-lg-4 col-sm-6 shuffle-item"">
                 <div class="project-img-container">
-                  <a class="gallery-popup" href="images/projects/project2.jpg">
-                    <img class="img-fluid" src="images/projects/project2.jpg" alt="project-image">
+                  <a class="gallery-popup" href="images/projects/altinekin-mustakil-evler/altinekin-evler-tasarim-mecra-proje-2.jpg" aria-label="project-img">
+                    <img class="img-fluid" src="images/projects/altinekin-mustakil-evler/altinekin-evler-tasarim-mecra-proje-2.jpg" alt="project-img">
                     <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="./content/projects/projects-single.html">Ghum Touch Hospital</a>
+                        <a href="content/projects/altinekin-guvercinlik-mustakil-ev-projesi.html">H.A. Mustakil Ev Projesi</a>
                       </h3>
-                      <p class="project-cat">Healthcare</p>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 shuffle-item"
-                data-groups="[&quot;infrastructure&quot;,&quot;commercial&quot;]">
+              <div class="col-lg-4 col-sm-6 shuffle-item"">
                 <div class="project-img-container">
-                  <a class="gallery-popup" href="images/projects/project3.jpg">
-                    <img class="img-fluid" src="images/projects/project3.jpg" alt="project-image">
+                  <a class="gallery-popup" href="images/projects/cayirbagi-villa/cayirbagi-ultra-luks-villa-projesi-mecra-proje-2.jpg" aria-label="project-img">
+                    <img class="img-fluid" src="images/projects/cayirbagi-villa/cayirbagi-ultra-luks-villa-projesi-mecra-proje-2.jpg" alt="project-img">
                     <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="./content/projects/projects-single.html">TNT East Facility</a>
+                        <a href="content/projects/cayirbagi-ultra-luks-villa-projesi.html">Çayırbağı Ultra Lüks Villa Projesi</a>
                       </h3>
-                      <p class="project-cat">Government</p>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 shuffle-item"
-                data-groups="[&quot;education&quot;,&quot;infrastructure&quot;]">
+              <div class="col-lg-4 col-sm-6 shuffle-item"">
                 <div class="project-img-container">
-                  <a class="gallery-popup" href="images/projects/project4.jpg">
-                    <img class="img-fluid" src="images/projects/project4.jpg" alt="project-image">
+                  <a class="gallery-popup" href="images/projects/mikronet-karbon/mikronet-karbon-ic-mekan-tasarim-mecra-proje-2.jpg" aria-label="project-img">
+                    <img class="img-fluid" src="images/projects/mikronet-karbon/mikronet-karbon-ic-mekan-tasarim-mecra-proje-2.jpg" alt="project-img">
                     <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="./content/projects/projects-single.html">Narriot Headquarters</a>
+                        <a href="content/projects/mikronet-karbon-ic-mekan-tasarim-projesi.html">Mikronet Karbon İç Mekan Tasarımı Projesi</a>
                       </h3>
-                      <p class="project-cat">Infrastructure</p>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 shuffle-item"
-                data-groups="[&quot;infrastructure&quot;,&quot;education&quot;]">
+              <div class="col-lg-4 col-sm-6 shuffle-item"">
                 <div class="project-img-container">
-                  <a class="gallery-popup" href="images/projects/project5.jpg">
-                    <img class="img-fluid" src="images/projects/project5.jpg" alt="project-image">
+                  <a class="gallery-popup" href="images/projects/bayram-bag-evi/bayram-bagevi-tasarim-mecra-proje-1.jpg" aria-label="project-img">
+                    <img class="img-fluid" src="images/projects/bayram-bag-evi/bayram-bagevi-tasarim-mecra-proje-1.jpg" alt="project-img">
                     <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="./content/projects/projects-single.html">Kalas Metrorail</a>
+                        <a href="content/projects/bayram-bag-evi-projesi.html">M.A. Bağ Evi Projesi</a>
                       </h3>
-                      <p class="project-cat">Infrastructure</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-6 shuffle-item" data-groups="[&quot;residential&quot;]">
-                <div class="project-img-container">
-                  <a class="gallery-popup" href="images/projects/project6.jpg">
-                    <img class="img-fluid" src="images/projects/project6.jpg" alt="project-image">
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
-                  </a>
-                  <div class="project-item-info">
-                    <div class="project-item-info-content">
-                      <h3 class="project-item-title">
-                        <a href="./content/projects/projects-single.html">Ancraft Avenue House</a>
-                      </h3>
-                      <p class="project-cat">Residential</p>
                     </div>
                   </div>
                 </div>
