--- a/content/projects/mikronet-karbon-ic-mekan-tasarim-projesi.html
+++ b/content/projects/mikronet-karbon-ic-mekan-tasarim-projesi.html
@@ -39,6 +39,10 @@
                 <a title="Linkedin" href="https://linkedin.com/company/mecra-proje-tasarim-uygulama" target="_blank">
                   <span class="social-icon"><i class="fab fa-linkedin"></i></span>
                 </a>
+                <a href="https://www.pinterest.jp/mecraproje/" aria-label="Pinterest"
+                  target="_blank"><i class="fab fa-pinterest"></i></a>
+                <a href="https://www.youtube.com/channel/UCzKqpejn_635Mgh_ZYRyhAg/featured" aria-label="Youtube"
+                    target="_blank"><i class="fab fa-youtube"></i></a>
               </li>
             </ul>
           </div>
@@ -104,8 +108,8 @@
                     <li class="nav-item">
                       <a href="../../team.html" class="nav-link">Ekibimiz</a>
                     </li>
-                    <li class="nav-item">
-                      <a href="../../projects.html" class="nav-link">Projelerimiz</a>
+                    <li class="nav-item active">
+                      <a href="../../projects.html" class="nav-link active">Projelerimiz</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="../../contact.html">İletişim</a></li>
                   </ul>
