--- a/team.html
+++ b/team.html
@@ -39,6 +39,10 @@
                 <a title="Linkedin" href="https://linkedin.com/company/mecra-proje-tasarim-uygulama" target="_blank">
                   <span class="social-icon"><i class="fab fa-linkedin"></i></span>
                 </a>
+                <a href="https://www.pinterest.jp/mecraproje/" aria-label="Pinterest"
+                  target="_blank"><i class="fab fa-pinterest"></i></a>
+                <a href="https://www.youtube.com/channel/UCzKqpejn_635Mgh_ZYRyhAg/featured" aria-label="Youtube"
+                    target="_blank"><i class="fab fa-youtube"></i></a>
               </li>
             </ul>
           </div>
@@ -95,14 +99,14 @@
 
                 <div id="navbar-collapse" class="collapse navbar-collapse">
                   <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item active">
-                      <a href="index.html" class="nav-link active">Anasayfa</a>
+                    <li class="nav-item">
+                      <a href="index.html" class="nav-link">Anasayfa</a>
                     </li>
                     <li class="nav-item">
                       <a href="about.html" class="nav-link">Hakkımızda</a>
                     </li>
-                    <li class="nav-item">
-                      <a href="team.html" class="nav-link">Ekibimiz</a>
+                    <li class="nav-item active">
+                      <a href="team.html" class="nav-link active">Ekibimiz</a>
                     </li>
                     <li class="nav-item">
                       <a href="projects.html" class="nav-link">Projelerimiz</a>
