--- a/content/projects/mikronet-karbon-ic-mekan-tasarim-projesi.html
+++ b/content/projects/mikronet-karbon-ic-mekan-tasarim-projesi.html
@@ -193,20 +193,19 @@
           <div class="row justify-content-between">
             <div class="col-lg-12 col-md-6 footer-widget footer-about">
               <h3 class="widget-title">Hakkımızda</h3>
-              <img loading="lazy" width="200px" class="footer-logo" src="../../images/mecra-logo-beyaz.png"
+              <img loading="lazy" width="200px" class="footer-logo" src="images/mecra-logo-beyaz.png"
                 alt="Mecra Proje Logo">
-              <p>Mecra Proje Ofisi 2021 yılında mimar ve mühendisler tarafından kurulmuş olup aktif olarak hizmet
-                vermeye devam etmektedir.</p>
+              <p>Mecra Proje Ofisi 2021 yılında mimar ve mühendisler tarafından kurulmuş olup aktif olarak hizmet vermeye devam etmektedir.</p>
               <div class="footer-social">
                 <ul>
                   <li><a href="https://www.instagram.com/mecraproje/" aria-label="Instagram" target="_blank"><i
                         class="fab fa-instagram"></i></a></li>
                   <li><a href="https://linkedin.com/company/mecra-proje-tasarim-uygulama" aria-label="Linkedin"
                       target="_blank"><i class="fab fa-linkedin"></i></a></li>
-                  <li><a href="https://www.pinterest.jp/mecraproje/" aria-label="Pinterest" target="_blank"><i
-                        class="fab fa-pinterest"></i></a></li>
+                  <li><a href="https://www.pinterest.jp/mecraproje/" aria-label="Pinterest"
+                        target="_blank"><i class="fab fa-pinterest"></i></a></li>
                   <li><a href="https://www.youtube.com/channel/UCzKqpejn_635Mgh_ZYRyhAg/featured" aria-label="Youtube"
-                      target="_blank"><i class="fab fa-youtube"></i></a></li>
+                          target="_blank"><i class="fab fa-youtube"></i></a></li>
                 </ul>
               </div>
             </div>
@@ -228,8 +227,8 @@
             <div class="col-md-6">
               <div class="footer-menu text-center text-md-right">
                 <ul class="list-unstyled">
-                  <li><a href="../../about.html">Hakkımızda</a></li>
-                  <li><a href="../../team.html">Ekibimiz</a></li>
+                  <li><a href="about.html">Hakkımızda</a></li>
+                  <li><a href="team.html">Ekibimiz</a></li>
                 </ul>
               </div>
             </div>
