--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </div>
                   </li>
                   <li class="header-get-a-quote">
-                    <a class="btn btn-primary" href="contact.html">Fiyat Teklifi Alın</a>
+                    <a class="btn btn-primary" href="contact.html">İletişime Geç</a>
                   </li>
                 </ul>
               </div>
@@ -175,7 +175,7 @@
             </div>
             <div class="col-md-4 text-center text-md-right mt-3 mt-md-0">
               <div class="call-to-action-btn">
-                <a class="btn btn-dark" href="https://wa.me/905078913738" target="_blank">Fiyat Teklifi Al</a>
+                <a class="btn btn-dark" href="https://wa.me/905078913738" target="_blank">İletişime Geç</a>
               </div>
             </div>
           </div>
@@ -186,7 +186,6 @@
       <div class="container">
         <div class="row text-center">
           <div class="col-lg-12">
-            <h2 class="section-title">Work of Excellence</h2>
             <h3 class="section-sub-title">Projelerimiz</h3>
           </div>
         </div>
