--- a/news.html
+++ b/news.html
@@ -79,7 +79,7 @@
                     </div>
                   </li>
                   <li class="header-get-a-quote">
-                    <a class="btn btn-primary" href="contact.html">Fiyat Teklifi Alın</a>
+                    <a class="btn btn-primary" href="contact.html">İletişime Geç</a>
                   </li>
                 </ul>
               </div>
