--- a/content/projects/bayram-bag-evi-projesi.html
+++ b/content/projects/bayram-bag-evi-projesi.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Mecra Proje</title>
+  <title>Bayram Bağ Evi Projesi - Mecra Proje</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Construction Html5 Template">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
