--- a/content/projects/altinekin-guvercinlik-mustakil-ev-projesi.html
+++ b/content/projects/altinekin-guvercinlik-mustakil-ev-projesi.html
@@ -192,7 +192,7 @@
           <div class="row justify-content-between">
             <div class="col-lg-12 col-md-6 footer-widget footer-about">
               <h3 class="widget-title">Hakkımızda</h3>
-              <img loading="lazy" width="200px" class="footer-logo" src="images/mecra-logo-beyaz.png"
+              <img loading="lazy" width="200px" class="footer-logo" src="../../images/mecra-logo-beyaz.png"
                 alt="Mecra Proje Logo">
               <p>Mecra Proje Ofisi 2021 yılında mimar ve mühendisler tarafından kurulmuş olup aktif olarak hizmet vermeye devam etmektedir.</p>
               <div class="footer-social">
