refactor: change title

--- a/team.html
+++ b/team.html
@@ -168,7 +168,7 @@
               </div>
               <div class="ts-team-content-classic">
                 <h3 class="ts-name">İBRAHİM TARIK ŞEN</h3>
-                <p class="ts-designation">İnşaat Mühendisi</p>
+                <p class="ts-designation">İnşaat Yüksek Mühendisi</p>
                 <div class="team-social-icons">
                   <a target="_blank" href="https://tr.linkedin.com/in/ibrahim-tar%C4%B1k-%C5%9Fen-43a9621bb"><i class="fab fa-linkedin"></i></a>
                 </div>
