refactor: change size name

--- a/content/projects/bayram-bag-evi-projesi.html
+++ b/content/projects/bayram-bag-evi-projesi.html
@@ -172,7 +172,7 @@
                 <p class="project-info-content">Meram, KONYA</p>
               </li>
               <li>
-                <p class="project-info-label">Ölçü</p>
+                <p class="project-info-label">Büyüklük</p>
                 <p class="project-info-content">180 m&sup2</p>
               </li>
               <li>
