--- a/content/projects/sedat-yazgan-mustakil-konut-projesi.html
+++ b/content/projects/sedat-yazgan-mustakil-konut-projesi.html
@@ -163,7 +163,7 @@
                 <p class="project-info-content">Karatay, KONYA</p>
               </li>
               <li>
-                <p class="project-info-label">Ölçü</p>
+                <p class="project-info-label">Büyüklük</p>
                 <p class="project-info-content">180 m&sup2</p>
               </li>
               <li>
