--- a/content/projects/altinekin-guvercinlik-mustakil-ev-projesi.html
+++ b/content/projects/altinekin-guvercinlik-mustakil-ev-projesi.html
@@ -173,7 +173,7 @@
                 <p class="project-info-content">Altınekin, KONYA</p>
               </li>
               <li>
-                <p class="project-info-label">Ölçü</p>
+                <p class="project-info-label">Büyüklük</p>
                 <p class="project-info-content">120 m&sup2</p>
               </li>
               <li>
