--- a/content/projects/altinekin-guvercinlik-yazlik-konut-projesi.html
+++ b/content/projects/altinekin-guvercinlik-yazlik-konut-projesi.html
@@ -176,7 +176,7 @@
                 <p class="project-info-content">Altınekin, KONYA</p>
               </li>
               <li>
-                <p class="project-info-label">Ölçü</p>
+                <p class="project-info-label">Büyüklük</p>
                 <p class="project-info-content">300 m&sup2</p>
               </li>
               <li>
