--- a/content/projects/cayirbagi-ultra-luks-villa-projesi.html
+++ b/content/projects/cayirbagi-ultra-luks-villa-projesi.html
@@ -179,7 +179,7 @@
                 <p class="project-info-content">Çayırbağı, KONYA</p>
               </li>
               <li>
-                <p class="project-info-label">Ölçü</p>
+                <p class="project-info-label">Büyüklük</p>
                 <p class="project-info-content">180 m&sup2</p>
               </li>
               <li>
