--- a/content/projects/mikronet-karbon-ic-mekan-tasarim-projesi.html
+++ b/content/projects/mikronet-karbon-ic-mekan-tasarim-projesi.html
@@ -174,7 +174,7 @@
                 <p class="project-info-content">Selçuklu, KONYA</p>
               </li>
               <li>
-                <p class="project-info-label">Ölçü</p>
+                <p class="project-info-label">Büyüklük</p>
                 <p class="project-info-content">60 m&sup2</p>
               </li>
               <li>
