feat: add new project to index page

--- a/index.html
+++ b/index.html
@@ -267,6 +267,21 @@
                   </div>
                 </div>
               </div>
+              <div class="col-lg-4 col-sm-6 shuffle-item"">
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="images/projects/sedat-yazgan-mustakil-konut/sedat-yazgan-mustakil-konut-mecra-proje-1.jpeg" aria-label="project-img">
+                    <img class="img-fluid" src="images/projects/sedat-yazgan-mustakil-konut/sedat-yazgan-mustakil-konut-mecra-proje-1.jpeg" alt="project-img">
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+                      <h3 class="project-item-title">
+                        <a href="content/projects/sedat-yazgan-mustakil-konut-projesi.html">S. Y. Müstakil Konut Projesi</a>
+                      </h3>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-12">
