feat: add new number in contact page

--- a/contact.html
+++ b/contact.html
@@ -172,6 +172,7 @@
               <div class="ts-service-box-content">
                 <h4>Bizi Arayın</h4>
                 <p><a href="tel:(+90) 507-891-3738">(+90) 507-891-3738</a></p>
+                <p><a href="tel:(+90) 530-994-2195">(+90) 530-994-2195</a></p>
               </div>
             </div>
           </div>
