--- a/projects.html
+++ b/projects.html
@@ -234,6 +234,21 @@
                   </div>
                 </div>
               </div>
+              <div class="col-lg-4 col-sm-6 shuffle-item"">
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="images/projects/y-lojistik-villa-projesi/y-lojistik-villa-projesi-mecra-proje-1.jpg" aria-label="project-img">
+                    <img class="img-fluid" src="images/projects/y-lojistik-villa-projesi/y-lojistik-villa-projesi-mecra-proje-1.jpg" alt="project-img">
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+                      <h3 class="project-item-title">
+                        <a href="content/projects/y-lojistik-villa-projesi.html">Y. Lojistik Villa Projesi</a>
+                      </h3>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
